--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,6 @@ exclude = [ ".gitignore", ".idea/*" ]
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
 num-traits = "0.2"
-nom = "8"
+#nom = "8"
 anyhow = "1.0"
+winnow = "0.7"
