--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "smali-rs"
+name = "smali"
 version = "0.1.0"
 edition = "2024"
 license = "GPL-3.0-only"
 description = "A library to read and write Android disassembly smali files."
 readme = "README.MD"
-repository = "https://github.com/suprohub/smali"
+repository = "https://github.com/azw413/smali"
 keywords = ["android", "dex", "dalvik", "java", "smali"]
 exclude = [ ".gitignore", ".idea/*" ]
 
@@ -15,6 +15,5 @@ exclude = [ ".gitignore", ".idea/*" ]
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
 num-traits = "0.2"
-#nom = "8"
 anyhow = "1.0"
 winnow = "0.7"
